minio/minio-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-deployment
  namespace: mlops
  labels:
    app: minio-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
      - name: minio-server
        image: quay.io/minio/minio:latest
        ports:
        - containerPort: 9000
          hostPort: 9000
        - containerPort: 9001
          hostPort: 9001
        command:
        - /bin/bash
        - -c
        args:
        - minio server /data --console-address :9001
        volumeMounts:
        - mountPath: /data
          name: data
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
        readinessProbe:
          httpGet:
            path: /minio/health/ready
            port: 9000
        livenessProbe:
          httpGet:
            path: /minio/health/live
            port: 9000
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: minio-pvc
