minio/minio-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: mlops
  labels:
    app: minio-service
spec:
  type: ClusterIP
  selector:
    app: minio
  ports:
  - name: api
    protocol: TCP
    port: 9000
    targetPort: 9000
  - name: webui
    protocol: TCP
    port: 9001
    targetPort: 9001
